# bluetti_connector

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.agents/: AGENTS.md
.agents/context/: known-issues.md  roadmap.md  rtk.md  upstream-provenance.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  swift.yml
docs/: README.md  local-web.md  macos-sample.md  python.md  swift.md  upstream.md
openspec/changes/reduce-github-actions-cost/: design.md  proposal.md  tasks.md
openspec/specs/bluetti-standalone-core/: spec.md
openspec/specs/local-bluetti-control-ui/: spec.md
openspec/specs/local-operator-runtime/: spec.md
openspec/specs/public-repository-automation/: spec.md
openspec/specs/public-repository-documentation/: spec.md
openspec/specs/standalone-browser-oauth-session/: spec.md
src/bluetti_connector/: cli.py  config.py  runtime_paths.py
swift/BluettiKit/: Package.swift  README.md
swift/BluettiMonitorSample/: Package.swift  README.md
tests/: fake_bluetti_gateway.py  test_runtime_entrypoints.py  test_runtime_paths.py
tests/backend/: conftest.py  test_backend_browser_oauth.py  test_backend_session_state.py  test_backend_smoke.py  test_live_account_verification.py  test_live_updates_manager.py  test_live_updates_stream.py
tests/core/: test_standalone_core_smoke.py  test_state_control_metadata.py  test_websocket_client.py
tests/web/: test_app_live_updates.mjs
(+123 files in other folders)
